# video-qa

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/video_qa/: __init__.py  _subprocess.py  cli.py  config.py  exceptions.py
src/video_qa/analyzers/: __init__.py
src/video_qa/core/: __init__.py  clusterer.py  comparator.py  extractor.py  renderer.py
src/video_qa/reporters/: __init__.py  markdown.py
tests/: conftest.py  test_cli_e2e.py  test_clusterer.py  test_comparator.py  test_config.py  test_markdown.py  test_renderer.py  test_subprocess.py
